# Sysdig

./: README.md  configs.yaml  connector.py  setup.cfg  setup.py
src/SysDig_connector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/secureEvents_connector.egg-info/: PKG-INFO  SOURCES.txt
src/secureEvents_connector/controller/: client.py  data.py
src/secureEvents_connector/utils/: __init__.py  general.py
